--- a/Exploring the World/index.html
+++ b/Exploring the World/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
-  <title>Namaste React</title>
+  <title>Exploring the World</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/dac597568a.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
-  <div id = "root">Not Rendered</div>
-  <script type ="module"src="src/components/App.js"></script>
+
+  <div id = "root">
+    <!--If something is written inside root , that will be overrided by whatever contains in render method if we use React-->
+    Not Rendered <!--if everything is not proper it will //not be overrided.-->
+  </div>
+<script type="module" src="src/App.js"></script>
 </body>
-
 </html>
-
-
